syntax = "proto3";

service PNodeService {
  rpc RegisterServer (RegisterServerRequest) returns (RegisterServerReply);
  rpc RegisterPartition (RegisterPartitionRequest) returns (RegisterPartitionReply);
  rpc Status (StatusRequest) returns (StatusReply);
}
message RegisterServerRequest {
  string id = 1;
  string url = 2;	
}
message RegisterServerReply {
}
message RegisterPartitionRequest {
  string partition_id = 1;
  repeated string server_ids = 2;
}
message RegisterPartitionReply {
}
message StatusRequest {
}
message StatusReply {
}
